# PvR

./: README.md
fizbuz/: Cargo.toml
week01/tests/: 01_factorial.rs  02_array_max.rs  03_struct.rs  04_luhn_algorithm.rs  05_match_parentheses.rs  06_write_tests.rs
week02/: Cargo.toml  README.md
week02-exercises/tests/: 01_state_transition_struct.rs
week02/tests/: 01_calc.rs  02_match_exercises.rs  03_state_transition.rs  04_srl_validator.rs  05_brainfuck_interpreter.rs
week03-exercises/: Cargo.toml
week03-exercises/tests/: 01_read_after_eof.rs  02_witness.rs  03_state_machine.rs  04_cow.rs
week03/src/: encrypt_decrypt.rs
week03/tests/: 01_longest.rs  02_strip_prefix.rs  03_interleave.rs  04_merge_slices.rs  05_bubble_sort.rs  06_zerocopy_parsing.rs
week04-exercises/: Cargo.toml
week04-exercises/tests/: 02_case_insensitive_cmp.rs  03_fibonacci.rs  04_iter_exercises.rs  05_range.rs
week04/tests/: 01_shape.rs  02_split_items.rs  03_cumulative_sum.rs  04_adjacent_diff.rs  05_poker_hand_value.rs  06_ringbuffer.rs
week05-exercises/: Cargo.toml
week05-exercises/src/: main.rs
week05/tests/: 01_binary_tree.rs  02_parser_combinator.rs  03_graph.rs
week06-exercises/uwuifythis/: Cargo.toml
week06-exercises/uwuifythis/src/: lib.rs
week07-exercises/: Cargo.toml
week08-exercises/: Cargo.toml
week09/: Cargo.toml
week09-exercises/: Cargo.toml
week09/src/: lib.rs  server.rs
week09/src/server/: client.rs
week10-exercises/: Cargo.toml  links-medium.txt  links-small.txt
week10-exercises/src/: main.rs
week11-exercises/: Cargo.toml
(+17 files in other folders)
