[package]
name = "week09"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
# Replace with a different low-level I/O crate on macOS/Windows
# You can also try to use mio, which is cross-platform
mio = { version = "1.0.2", features = ["os-poll", "os-ext", "net"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
