[package]
name = "uwuifythis"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uwuify = "0.2.2"
syn = { version = "2.0.85", features = ["full", "visit-mut"] }
quote = "1.0.37"
proc-macro2 = "1.0.89"
html_parser = "0.7.0"
